2002-06-19  Ross Burton  <ross@burtonini.com>

	* gnomine.c (about): Load the image from the application pixmap
	path, not the system path.

2002-06-09  Juan Pablo Mendoza <jpablo@gnulinux.org.mx>

	* gnomime.c (image_widget_setup): Find the images on
	  the correct location.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* gnomine.c: made help work

2002-05-26  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for docs move
	* help/C/gnome-mines-C.omf: delete for docs move
	* help/C/gnome-mines.xml: delete for docs move
	* help/C/gnomine-C.omf: add for docs move
	* help/C/gnomine.xml: add for docs move
	
2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnome-mines-C.omf: updated for new format of SK 0.3.8.
	
2002-04-20  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnomine.c: (set_flabel), (new_game), (preferences_callback),
	(nstr), (main):
	* minefield.c: (_setup_sign), (gtk_mine_draw),
	(gtk_minefield_lose), (gtk_minefield_win),
	(gtk_minefield_toggle_mark), (gtk_minefield_button_press),
	(gtk_minefield_button_release), (gtk_minefield_class_init),
	(gtk_minefield_new), (gtk_minefield_get_type),
	(gtk_minefield_restart):
	* minefield.h: ported to GObject, fixed resize bug, it's now
	fully ported to Gnome2

2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnomine.c: (image_widget_setup), (about), (size_radio_callback),
	(apply_cb), (preferences_callback), (main):
	* minefield.c: (gtk_minefield_expose), (gtk_minefield_restart):
	one step closer to gnome2 porting (removed GnomePropertyBox,
	gnome_config_*, gnome_pixmap_*)

2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* gnomine.c: (about), (main): remove ENABLE_NLS, add nice icon
	* minefield.c: (gtk_minefield_setup_numbers):
	move the numbers 4 pixels up, which should "fix" the numbers
	appearing between cells

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: