@@ -1,3 +1,8 @@
+2002-08-23  Ross Burton  <ross@burtonini.com>
+
+	* gnomine.c: Enable the high scores dialog. Patch from Andrew
+	Sobala <andrew@sobala.net>, fixing #84235.
+
 2002-06-19  Ross Burton  <ross@burtonini.com>
 
 	* gnomine.c (about): Load the image from the application pixmap
